Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58599

No access token for MapboxGL plugin generates std::runtime_error exception

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.9
    • 5.9
    • None
    • ubuntu 1604
    • f5021281c56b660b81d0122608ca9b577889f99e

    Description

      not setting a plugin parameter with an access token (or perhaps setting it with an empty token) triggers an exception in mbgl and an application crash

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tmpsantos Thiago Marcos P. Santos
            paangele Paolo Angelelli
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes